<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/alertdialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_header"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/sms_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alertdialog_phone_number_hint"
        android:layout_below="@id/alertdialog_header"
        android:inputType="phone"/>

    <Button
        android:id="@+id/send_sms_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sms_phone_number"
        android:text="@string/alertdialog_send_sms"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_sms_button"
        android:hint="@string/alertdialog_email_address_hint"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_address"
        android:text="@string/alertdialog_send_email"/>

</RelativeLayout>