<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogIn"
    android:background="@color/secondary_color">

    <Button
        android:id="@+id/login_submenu_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_login_button"
        android:backgroundTint="@color/secondary_color"
        />

    <Button
        android:id="@+id/register_submenu_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_register_button"
        android:layout_toEndOf="@id/login_submenu_button"
        android:backgroundTint="@color/secondary_color"/>

    <RelativeLayout
        android:id="@+id/login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_login"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_text"
            android:textColor="@color/white"
            android:hint="@string/input_username_hint"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/secondary_color_darker_2"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_username"
            android:textColor="@color/white"
            android:hint="@string/input_password_hint"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/secondary_color_darker_2"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:layout_centerHorizontal="true"
            android:text="@string/login_login_button"
            android:backgroundTint="@color/secondary_color_darker_1"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/register_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_text"
            android:textColor="@color/white"
            android:hint="@string/input_username_hint"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/secondary_color_darker_2"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username"
            android:textColor="@color/white"
            android:hint="@string/input_password_hint"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/secondary_color_darker_2"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_centerHorizontal="true"
            android:text="@string/login_register_button"
            android:backgroundTint="@color/secondary_color_darker_1"/>

    </RelativeLayout>
</RelativeLayout>